@@ -1,3 +1,8 @@
+2008-02-17  Ales Hakl  <ales at hakl dot net>
+
+	* src/dfsch.c (dfsch_symbol_2_typename): centralized removal of
+	brackets from typenames
+
 2008-02-15  Ales Hakl  <ales at hakl dot net>
 
 	* src/dfsch.c (dfsch_obj_write): insert space after typename
